Actualización completa para la integración con Clerk v6, incluyendo cambios en la configuración de autenticación, ajustes en los componentes de la interfaz de usuario, y mejoras en la gestión de rutas. Se han corregido y simplificado varios componentes, así como la implementación de nuevos hooks y providers.

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 // .env.local.example
 // ================================
 # Clerk Authentication
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_...
-CLERK_SECRET_KEY=sk_test_...
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZGFyaW5nLWthdHlkaWQtMjQuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_C0NrL7W9hSp15QXm4JMUIcJIZqYT7x6slfbHcT9ZQb
 
 # API Backend
 NEXT_PUBLIC_API_URL=http://localhost:8000
